<resources>

    <string name="confirm">확인</string>    
    
    <string name="app_name">Location "\n"Tracker</string>
    <string name="path_alert">경로 알리미</string>
    <string name="car_info">차량정보</string>
    <string name="home">HOME</string>
    <string name="phone_address">주소록</string>
    <string name="storage_box">보관함</string>
    <string name="setting">환경설정</string> 
    <string name="start_location">출발지:</string>
    <string name="current_location">현재위치</string>
    <string name="location_setting">위치설정</string>
    <string name="dest_location">목적지:</string>
    <string name="input_dest_info">명칭을 입력하세요</string>
    <string name="go_home">집으로</string>
    <string name="go_company">회사로</string>
    <string name="empty_data">데이터가 존재하지 않습니다.</string>
    <string name="found_no_path">경로를 찾지 못하였습니다.</string>
    <string name="no_recent_search">최근 검색한 경로가 없습니다.</string>
    <string name="empty_google_calendar">구글 캘린더에서 일정을 등록해 주세요.</string>
    <string name="empty_favorite">경로 검색후 즐겨 찾기를 추가해 주세요.</string>
    <string name="call_address_setting">연락처 설정</string>
    <string name="favorite_search">즐겨찾기</string>
    <string name="path_detail">경로상세</string>
    <string name="start">시작</string>
    <string name="distance">거리:</string>
    <string name="will_arrive_time">예상소요시간:</string>
    <string name="my_address">내 연락처</string>
    <string name="nate_on">네이트온</string>    
    <string name="name">이름</string>    
    <string name="phone_number">전화번호</string>    
    <string name="direct_regist">직접 등록</string>    
    <string name="favorite_management">즐겨찾기 관리</string>    
    <string name="direct_address_management">지정 연락처 관리</string>    
    <string name="message_send_management">메시지 발신함 관리</string> 
    <string name="message_send">메시지 발신함</string>    
    <string name="path_management">이동경로 관리</string>    
    <string name="change_name">이름변경</string>    
    <string name="delete">삭제하기</string>    
    <string name="all_delete">전체삭제</string>    
    <string name="add_address">지정 연락처 추가</string>
    <string name="send_box">발신함</string>
    <string name="send_message">보낸 메시지</string>
    <string name="send_tag">보낸 쪽지</string>
    <string name="move_path">이동경로</string>
    <string name="map_view">지도보기</string>
    <string name="arrived_time">소요시간:</string>
    <string name="move_path_detail">이동경로상세</string>
    <string name="account_setting">계정 설정</string>
    <string name="shortcuts_setting">바로가기 설정</string>
    <string name="message_setting">메시지 설정</string>
    <string name="login">로그인</string>
    <string name="account_setting_terms">
		네이트온 로그인을 하시면 서비스를 이용하실 수 있습니다. 가입한 회원정보를 입력 해주세요. 
    </string>
    <string name="member_info">네이트온 회원 정보</string>
    <string name="auto_login">자동 로그인</string>
    <string name="logout">로그아웃</string>
    <string name="shortcuts">바로가기</string>
    <string name="home_set">집으로 설정</string>
    <string name="home_set_terms">‘집으로’버튼에 설정된 장소를 변경합니다.</string>
    <string name="company_set">회사로 설정</string>
    <string name="company_set_terms">‘회사로’버튼에 설정된 장소를 변경합니다.</string>
    <string name="search">경로 찾기</string>
    <string name="settings_search">검색</string>
    <string name="map_search">지도에서 찾기</string>
    <string name="message_send_tick">메시지 전송 주기 설정</string>
    <string name="message_text_setting">메시지 문구 설정</string>
    <string name="arrived_noti_setting">도착 알림 설정</string>
    <string name="after_arrived_path_save">도착 후 경로 자동저장</string>
    <string name="message_text_write">메시지 문구 작성</string>
    <string name="input_message">메시지를 입력하세요.</string>
    <string name="arrived_noti_way_setting">도착 알림 방법 설정</string>
    <string name="arrived_noti_tick_setting">도착 알림 간격 설정</string>
    <string name="arrived_noti_ring_setting">도착 알림음 설정</string>
    <string name="start_location_choice">출발지 선택</string>
    <string name="end_location_choice">도착지 선택</string>
    <string name="choose_location_on_the_map">지도에서 목적지를 선택하세요</string>
    <string name="defined_number_register">지정번호 등록</string>
    <string name="direct_number_register">직접 등록</string>
    <string name="send_message_success">메시지를 전송하였습니다</string>
    <string name="send_message_fail">메시지 전송을 실패하였습니다</string>    
    <string name="my_events">나의 일정</string>
    <string name="designated_contact">지정 연락처</string>
    <string name="no_designated_contact">지정 연락처가 설정되지 않았습니다.\n 연락처 설정을 해주세요</string>
    <string name="searching">탐색중....</string>
    <string name="choose_as_designated_contact">선택하신 연락처를 지정번호로 등록 하시겠습니까?</string>  
    <string name="require_private_auth">프라이빗 인증이 필요한 서비스 입니다. 등록후 실행해 주세요.</string> 
    <string name="registering_contact">연락처를 등록 중 입니다.</string> 
    <string name="choose_contact">지정 연락처를 선택해 주세요.</string> 
    <string name="input_favorite_name">즐겨찾기 이름을 입력하세요.</string>   
    <string name="input_favorite_name_success">즐겨찾기에 추가 되었습니다.</string>  
    <string name="input_name_to_be_changed">변경할 이름을 선택하세요</string>  
    <string name="delete_selected_favorite_items">선택하신 항목을 삭제 하시겠습니까?</string> 
    <string name="delete_total_items">전체 항목을 삭제 하시겠습니까?</string> 
    <string name="no_select_item">항목을 선택해 주세요.</string> 
    <string name="delete_selected_message">선택하신 메시지를 삭제 하시겠습니까?</string> 
    <string name="auth_error">인증이 실패 하였습니다.</string>
    <string name="saved_as_designated_contact">지정연락처로 반영 되었습니다.</string>
    <string name="already_registerd">이미 등록된 이름입니다.</string>
    <string name="select_as_destination">목적지로</string>
    <string name="speed">속도:</string>
    <string name="time">시간:</string>
    <string name="driving_distance">주행:</string>
    <string name="no_info">정보없음</string>
    <string name="start_alert">알리미를 시작합니다.</string>    
    <string name="not_support_gps">GPS 가 지원되지 않습니다.</string>
    <string name="not_support_network">네트워크가 지원되지 않습니다.</string>
    <string name="canot_know_location">위치 정보를 찾을 수 없습니다.</string>
    <string name="enable_gps">GPS 활성화</string>
    <string name="enable_gps_dialog">정확한 서비스를 위해 GPS 를 활성화 하시겠습니까?</string>
    <string name="stop_sending_msg">메시지 전송 중지</string>
    <string name="loading">로딩중...</string>
    <string name="doing_setting">설정중...</string>
    <string name="setting_ok">설정 되었습니다.</string>
    <string name="setting_required">환경설정 바로가기에서 설정해 주세요.</string>
    <string name="network_error">네트워크 에러 발생.</string>
    <string name="location">장소:</string>
    <string name="sending_msg_stop">메시지 전송이 중지 되었습니다.</string>
    <string name="near_destination">도착지 주변</string>
    <string name="recent_search_path">최근 검색 경로</string>
    <string name="arrived_near_destination">목적지 주변 도착</string>
    <string name="arrived_near_destination_and_end">목적지 주변에 도착하여 알리미를 종료 합니다</string>    
    <string name="no_network">네트워크가 연결되지 않았습니다.</string>    
	
	<!-- turn type -->
	<string name="T11">직진</string>
	<string name="T12">좌회전</string>
	<string name="T13">우회전</string>
	<string name="T14">U 턴</string>
	<string name="T15">P 턴</string>
	<string name="T16">8시 방향 좌회전</string>
	<string name="T17">10시 방향 좌회전</string>
	<string name="T18">2시 방향 우회전</string>
	<string name="T19">4시 방향 우회전</string>
	<string name="T101">우측 고속도로 입구</string>
	<string name="T102">죄측 고속도로 입구</string>
	<string name="T103">전방 고속도록 입구</string>
	<string name="T104">우측 고속도로 출구</string>
	<string name="T105">좌측 고속도로 출구</string>
	<string name="T106">전방 고속도로 출구</string>
	<string name="T111">우측 도시고속도로 입구</string>
	<string name="T112">좌측 도시고속도로 입구</string>
	<string name="T113">전방 도시고속도로 입구</string>
	<string name="T114">우측 도시고속도로 출구</string>
	<string name="T115">좌측 도시고속도로 출구</string>
	<string name="T116">전방 도시고속도로 출구</string>
	<string name="T117">우측 방향</string>
	<string name="T118">좌측 방향</string>
	<string name="T119">지하차도</string>
	<string name="T120">고가도로</string>
	<string name="T121">터널</string>
	<string name="T122">교량</string>
	<string name="T123">지하차도 옆</string>
	<string name="T124">고가도로 옆</string>
	<string name="T131">1시 방향</string>
	<string name="T132">2시 방향</string>
	<string name="T133">3시 방향</string>
	<string name="T134">4시 방향</string>
	<string name="T135">5시 방향</string>
	<string name="T136">6시 방향</string>
	<string name="T137">7시 방향</string>
	<string name="T138">8시 방향</string>
	<string name="T139">9시 방향</string>
	<string name="T140">10시 방향</string>
	<string name="T141">11시 방향</string>
	<string name="T142">12시 방향</string>
	<string name="T200">출발지</string>
	<string name="T201">도착지</string>	
	
	<!--     차량정보 -->
    <string name="nfc_tag_read">NFC 태그 읽기</string>
    <string name="nfc_tag_write">NFC 태크 기록</string>
	<!-- NFC TAG -->
    <string name="nfc_connect_text">태그를 휴대폰 배터리 부에 접촉시켜 주세요.</string>
    <string name="nfc_tag_number">태그번호 :&#160;</string>
    <string name="nfc_company_name">상호 :&#160;</string>
    <string name="nfc_business_number">사업자번호 :&#160;</string>
    <string name="nfc_representatives">대표자 :&#160;</string>
    <string name="nfc_vehicle_number">차량번호 :&#160;</string>
    <string name="nfc_address">주소  :&#160;</string>
    <string name="nfc_phone_number">전화번호  :&#160;</string>
    <string name="nfc_send">정보 전송</string>
	<!--     NFC 정보전송 -->
	<string name="nfc_recipient">수신 :</string>
	<string name="nfc_choose_contact">연락처 선택</string>
	<!--     NFC 정보전송 -->
	<string name="nfc_read_record">읽은 기록(%d)</string>
	
	<!--     메시지 발신함 -->
	<string name="send_msg_title">[실시간 이동 경로 알리미]</string>
	<string name="send_msg_starting_point">-출발지</string>
	<string name="send_msg_destination">-목적지</string>
	<string name="send_msg_ETE">-예상 소요 시간</string>
	<string name="send_msg_messaging">-메시징</string>
	
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="appear_map">지도보기</string>
    <string name="appear_context">상세보기</string>
    <string name="search_path">경로 탐색 중 입니다...</string>
</resources>