<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/header_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

       <TextView
           android:layout_width="fill_parent"
           android:layout_height="40dp"
           android:layout_gravity="center_vertical|center_horizontal"
           android:gravity="center"
           android:text="@string/account_setting"
           android:textColor="@color/color_title"
           android:background="@color/color_titlebar"
           android:textSize="18sp"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_setting_terms" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/member_info" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_ll" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_below="@id/header_ll"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

            <EditText
                android:id="@+id/pwd_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number" />

            <CheckBox
                android:id="@+id/autoLogin_cb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_login" />
        </LinearLayout>

        <Button
            android:id="@+id/logIn_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/login" />
    </RelativeLayout>

    <RelativeLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ll" >

        <Button
            android:id="@+id/logOut_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/logout" />

        <TextView
            android:id="@+id/id_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/logOut_bt" />
    </RelativeLayout>

</RelativeLayout>