<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title_tv"
        android:layout_marginTop="70dip"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:textSize="25sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name" />

    <LinearLayout
        android:layout_below="@id/title_tv"
        android:layout_marginTop="70dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/path_alert"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_weight="1"
            android:text="@string/path_alert" />

        <Button
            android:id="@+id/car_info"
            android:textSize="25sp"
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:layout_weight="1"
            android:text="@string/car_info" />
    </LinearLayout>

</RelativeLayout>