<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:background="@color/color_titlebar"
        android:gravity="center"
        android:text="@string/path_detail"
        android:textColor="@color/color_title"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/header_ly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_tv"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp" >

        <Button
            android:id="@+id/mapView_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/map_view"
            android:textSize="15sp"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/mapView_bt"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_location"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/start_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="영등포역"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dest_location"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/dest_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="종각역"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrived_time"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/arrived_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <RadioGroup
        android:id="@+id/appear_type_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_ly"
        android:background="@color/gray"
        android:checkedButton="@+id/map_rb"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/map_rb"
            style="@style/FlatRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/appear_map"
            android:textColor="@color/white" />

        <RadioButton
            android:id="@+id/context_rb"
            style="@style/FlatRadioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="15dp"
            android:text="@string/appear_context"
            android:textColor="@color/white" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/map_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appear_type_rg" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/context_ly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appear_type_rg"
        android:visibility="gone" >

        <ListView
            android:id="@+id/android:list"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <TextView
            android:id="@+id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/found_no_path" />
    </LinearLayout>

</RelativeLayout>